chore: optimization for better quality code