@@ -2,7 +2,6 @@ package com.tournamentmanagmentsystem.service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 import org.springframework.stereotype.Service;
@@ -56,7 +55,7 @@ public class RefereesService {
      * @return a List of all {@link RefereesEntity} in the repository.
      */
     public List<RefereesEntity> findAll () {
-        return StreamSupport.stream(this.refereesRepository.findAll().spliterator(), false).collect(Collectors.toList());
+        return StreamSupport.stream(this.refereesRepository.findAll().spliterator(), false).toList();
     }
 
     /**
